--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BootstrapDash Comingsoon Template</title>
+    <title>넘치는 즐거움! 두펀잉!</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.materialdesignicons.com/4.8.95/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
@@ -18,10 +19,9 @@
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/images/logo.svg" alt="logo">
+                    <img src="assets/images/doo_logotype_Graphic_.png" style="max-width:33%;height:auto" alt="logo">
                 </a>
-                <span class="navbar-text ml-auto d-none d-sm-inline-block">978-130-5444 </span>
-                <span class="navbar-text d-none d-sm-inline-block">jerald_glover@glennie.tv</span>
+                <span class="navbar-text d-none d-sm-inline-block">ni041372@doofuning.com</span>
             </nav>
         </div>
     </header>
