--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <div class="container">
             <nav class="navbar navbar-dark bg-transparenet">
                 <a class="navbar-brand" href="#">
-                    <img src="assets/images/doo_logotype_Graphic_.png" style="max-width:33%;height:auto" alt="logo">
+                    <img src="assets/images/doo_logotype_Graphic_.png" style="max-width:23%;height:auto" alt="logo">
                 </a>
-                <span class="navbar-text d-none d-sm-inline-block">ni041372@doofuning.com</span>
+                <span class="navbar-text ml-auto d-none d-sm-inline-block">ni041372@doofuning.com</span>
             </nav>
         </div>
     </header>
     <main class="my-auto">
         <div class="container">
-            <h1 class="page-title">We're coming soon</h1>
-            <p class="page-description">Lorem ipsum dolor sit amet consectetur adipisicing elit sed eiu sit amet consectetur
+            <h1 class="page-title">두펀잉은 공사중입니다!</h1>
+            <p class="page-description">팬들의 즐거움을 위해 달릴 수 있는 튼튼한 플랫폼을 만들고 있습니다.<br>두펀잉이 앞으로 만들어나갈 팬 비즈니스에 많은 관심 부탁드립니다.
             </p>
             <p>Stay connected</p>
             <nav class="footer-social-links">
