--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main class="my-auto">
         <div class="container">
             <h1 class="page-title">두펀잉은 공사중입니다!</h1>
-            <p class="page-description">팬들의 즐거움을 위해 달릴 수 있는 튼튼한 플랫폼을 만들고 있습니다.<br>두펀잉이 앞으로 만들어나갈 팬 비즈니스에 많은 관심 부탁드립니다.
+            <p class="page-description">팬들의 즐거움을 위한 플랫폼을 만들고 있습니다.<br>두펀잉이 만들 팬 비즈니스에 많은 관심 부탁드립니다.
             </p>
             <p>Stay connected</p>
             <nav class="footer-social-links">
