--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                 <a class="navbar-brand" href="#">
                     <img src="assets/images/doo_logotype_Graphic_.png" style="max-width:23%;height:auto" alt="logo">
                 </a>
-                <span class="navbar-text ml-auto d-none d-sm-inline-block">ni041372@doofuning.com</span>
             </nav>
         </div>
     </header>
@@ -30,11 +29,11 @@
             <h1 class="page-title">두펀잉은 공사중입니다!</h1>
             <p class="page-description">팬들의 즐거움을 위한 플랫폼을 만들고 있습니다.<br>두펀잉이 만들 팬 비즈니스에 많은 관심 부탁드립니다.
             </p>
-            <p>Stay connected</p>
+            <p>contact</p>
             <nav class="footer-social-links">
-                <a href="#!" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
-                <a href="#!" class="social-link"><i class="mdi mdi-twitter"></i></a>
-                <a href="#!" class="social-link"><i class="mdi mdi-google"></i></a>
+                <a href="ni041372@doofuning.com" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
+                <a href="https://twitter.com/EsportsDfi" class="social-link"><i class="mdi mdi-twitter"></i></a>
+                <a href="https://www.instagram.com/blades_kart_official/" class="social-link"><i class="mdi mdi-google"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-slack"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-skype"></i></a>
             </nav>
