--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav class="footer-social-links">
                 <a href="ni041372@doofuning.com" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
                 <a href="https://twitter.com/EsportsDfi" class="social-link"><i class="mdi mdi-twitter"></i></a>
-                <a href="https://www.instagram.com/blades_kart_official/" class="social-link"><i class="mdi mdi-google"></i></a>
+                <a href="https://www.instagram.com/blades_kart_official/" class="social-link"><i class="mdi mdi-instagram"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-slack"></i></a>
                 <a href="#!" class="social-link"><i class="mdi mdi-skype"></i></a>
             </nav>
