--- a/index.html
+++ b/index.html
@@ -31,11 +31,10 @@
             </p>
             <p>contact</p>
             <nav class="footer-social-links">
-                <a href="ni041372@doofuning.com" class="social-link"><i class="mdi mdi-facebook-box"></i></a>
-                <a href="https://twitter.com/EsportsDfi" class="social-link"><i class="mdi mdi-twitter"></i></a>
-                <a href="https://www.instagram.com/blades_kart_official/" class="social-link"><i class="mdi mdi-instagram"></i></a>
-                <a href="#!" class="social-link"><i class="mdi mdi-slack"></i></a>
-                <a href="#!" class="social-link"><i class="mdi mdi-skype"></i></a>
+                <a href="https://twitter.com/EsportsDfi" target='_blank' class="social-link"><i class="mdi mdi-twitter"></i></a>
+                <a href="https://www.instagram.com/blades_kart_official" target='_blank' class="social-link"><i class="mdi mdi-instagram"></i></a>
+                <a href="mailto:ni041372@doofuning.com" target='_blank' class="social-link"><i class="mdi mdi-email"></i></a>
+                <a href="https://dfiesports.com" target='_blank' class="social-link"><i class="mdi mdi-panorama"></i></a>
             </nav>
         </div>
     </main>
