--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
             <nav class="footer-social-links">
                 <a href="https://twitter.com/EsportsDfi" target='_blank' class="social-link"><i class="mdi mdi-twitter"></i></a>
                 <a href="https://www.instagram.com/blades_kart_official" target='_blank' class="social-link"><i class="mdi mdi-instagram"></i></a>
-                <a href="mailto:ni041372@doofuning.com" target='_blank' class="social-link"><i class="mdi mdi-email"></i></a>
-                <a href="https://dfiesports.com" target='_blank' class="social-link"><i class="mdi mdi-panorama"></i></a>
+                <a href="mailto:contact@dfiesports.com" target='_blank' class="social-link"><i class="mdi mdi-email"></i></a>
             </nav>
         </div>
     </main>
